--- a/CSS/menu.css
+++ b/CSS/menu.css
@@ -5,36 +5,11 @@ body{
     background-image: url("/imagenes/fondotragamonedas.jpg");
     background-size: 100% 100%;
 }
-/* header{
-    width: 100%;
-    background-color: #4E94AB;
-    opacity: 0.8;
-} */
+
 
 #btn-menu{
     display: none;
 }
-
-/* header label{
-    display: none;
-    width: 30px;
-    height: 55px;
-    padding: 10px 0 0;
-    border-right: 1px solid #fff;
-    text-align: center;
-} */
-
-/* header label:hover{
-    cursor: pointer;
-    background-color: rgba(0, 0, 0, 0.3);
-} */
-
-/* .menu ul{
-    margin: 0;
-    list-style: none;
-    padding: 0;
-    display: flex;
-} */
 
 #apuesta-1,#apuesta-2{
     -webkit-text-stroke: 2px black;
@@ -45,35 +20,15 @@ body{
     font-size: 25px;;
     background-color: white;
 }
-/* .menu li{
-    text-align: center;
-    flex-grow: 1;
-} */
-
-/* .menu li:hover{
-    background: rgba(0, 0, 0, 0.3);
-} */
 
 #maquina-1,#maquina-2{
     border: 3px solid white;
     border-radius: 20px;
 }
 
-/* .menu li a{
-    display: block;
-    padding: 15px 20px;
-    color: #fff;
-    text-decoration: none;
-    color: lemonchiffon;
-} */
-
 .nom-maquina{
     font-size: 20px;
 }
-
-/* nav ul li a i{
-    padding-right: 10px;
-} */
 
 #user{
     cursor: pointer;
@@ -134,6 +89,13 @@ h1{
 #img-mb,#maquina-1, #maquina-2{
     width: 100%;
 }
+#Traga{
+    float: left;
+}
+#bexit{
+    float: right;
+    font-size: 5px;
+}
 
 @media (max-width:768px){
     h1{
@@ -142,35 +104,41 @@ h1{
     .nom-maquina{
         font-size: 1rem;
     }
-     
+    #MensajeB, #MensajeA{
+        font-size: 9px;
+    } 
     #btn-menu:checked ~ .menu{
          margin: 0;
-    }
-    /* TO WATCH: */
-    #but-min-m1, #but-max-m1, #but-min-m1{  
-        width: 0.5rem;
-        height: 1rem;
-        display: inline-block;
     }
     #apuesta-1, #apuesta-2{
         font-size: 0.7rem;
     }
     #menu-toggle{
-        /* width: 2rem;
-        height: 2rem; */
         font-size:9px;
-        /* text-align: center !important; */
         margin-left:0 !important; 
     }
     #closeButton{
-        width:0.5rem !important;
-        height: 0.5rem !important;
+        width:2rem !important;
+        height: 2rem !important;
+        padding: 0px 0px !important;
     }
-    #closeButton02{
-        width: 0.5rem !important;
-        height: 0.5rem !important;
+    #Maq01, #Maq02{
+        padding: 0px 0px !important;
     }
-    #Traga, #bexit{
-        height: 5px;
+    #min-m2, #max-m2, #max-m1, #min-m1{
+        font-size: 15px;
+    }
+    #but-min-m1, #but-min-m2{
+        margin-bottom: 5px;
+    }
+    #but-max-m1,#but-max-m2{
+        margin-top: 5px;
+    }
+    #Traga{
+        float: left;
+    }
+    #bexit{
+        float: right;
+        font-size: 5px;
     }
 }
